--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 		<link rel="stylesheet" href="./assets/index.f486a093.css" />
 	</head>
 
+	<script>
+		console.log("[ window.origin ] >", window.origin)
+	</script>
+
 	<body>
 		<div id="app"></div>
 	</body>
