--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1, user-scalable=no" />
 		<title>未来工场校招</title>
-		<script type="module" crossorigin src="./assets/index.6d6f625f.js"></script>
-		<link rel="stylesheet" href="./assets/index.f486a093.css" />
+		<script type="module" crossorigin src="/wenext-recruit/assets/index.6d6f625f.js"></script>
+		<link rel="stylesheet" href="/wenext-recruit/assets/index.f486a093.css" />
 	</head>
 
 	<script>
